--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
         "colors": "^1.4.0",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
+        "express-fileupload": "^1.2.0",
+        "jsonwebtoken": "^8.5.1",
         "morgan": "^1.10.0",
         "mysql": "^2.18.1",
         "passport": "^0.4.1",
+        "passport-jwt": "^4.0.0",
         "passport-local": "^1.0.0"
     }
 }
