--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
         "express-fileupload": "^1.2.0",
         "jsonwebtoken": "^8.5.1",
         "morgan": "^1.10.0",
-        "mysql": "^2.18.1",
+        "mysql2": "^2.2.5",
         "passport": "^0.4.1",
         "passport-jwt": "^4.0.0",
-        "passport-local": "^1.0.0"
+        "passport-local": "^1.0.0",
+        "sequelize": "^6.3.5"
     }
 }
