--- a/.gitignore
+++ b/.gitignore
@@ -114,6 +114,6 @@ dist
 .vscode-test
 .vscode
 
-/public/uploads
+# /public/uploads
 
 # End of https://www.toptal.com/developers/gitignore/api/node
