--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-fileupload": "^1.2.0",
+        "firebase-admin": "^9.4.2",
         "jsonwebtoken": "^8.5.1",
         "morgan": "^1.10.0",
         "mysql2": "^2.2.5",
