--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
         "jsonwebtoken": "^8.5.1",
         "morgan": "^1.10.0",
         "mysql2": "^2.2.5",
+        "node-fetch": "^2.6.1",
         "passport": "^0.4.1",
         "passport-jwt": "^4.0.0",
         "passport-local": "^1.0.0",
-        "sequelize": "^6.3.5"
+        "sequelize": "^6.3.5",
+        "sequelize-to-json": "^0.10.4"
     }
 }
