--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
         "passport": "^0.4.1",
         "passport-jwt": "^4.0.0",
         "passport-local": "^1.0.0",
+        "pg": "^8.5.1",
+        "pg-hstore": "^2.3.3",
         "sequelize": "^6.3.5",
         "sequelize-to-json": "^0.10.4",
         "socket.io": "^3.0.5"
